gap fix

--- a/test/style.css
+++ b/test/style.css
@@ -9,7 +9,7 @@ body {
    body{
     .container {
         flex-direction:column;
-        gap: 15;
+        gap: 10rem;
     }
     
     .video-sections {
